--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <header>
-        <nav id="topnav">
-            <div class="nav-item">
+    <header class="container">
+        <nav id="topnav" class="grid grid-col">
+            <div>
                 <img src="assets/List.svg" alt="Barra de menu">
                 <a href="#">Menu</a>
             </div>
-            <div class="nav-item"><h1>TECH NEWS</h1></div>
-            <div class="nav-item">
+            <div ><h1>TECH NEWS</h1></div>
+            <div>
                 <a href="#">Buscar</a>
                 <img src="assets/MagnifyingGlass.svg" alt="Lupa">
             </div>
         </nav>
-        <nav id="bottomnav">
+        <nav id="bottomnav" class="grid grid-col">
             <a href="#">Inteligência Artificial</a>
             <a href="#">Blockhain</a>
             <a href="#">Hologramas</a>
