Adicionando outras sessões

--- a/index.html
+++ b/index.html
@@ -68,7 +68,79 @@
                     </figcaption>
                 </figure>
             </div>
+        </section>
+        <section id="most-read" class="section">
+            <div class="top-bar">
+                <span>Mais lidas da semana</span>
+                <a href="#">Ver tudo <img src="assets/ArrowRight.svg" style="color: blue" alt="seta"></a>
+            </div>
+            <figure class="grid grid-col gap-16">
+            <figcaption>
+                <img src="assets/Image 06.png" alt="carro">
+                <span class="content-tag">Veículos</span>
+                <h3 class="text-lg">
+                    Protótipo de veículo voador é apresentado, marcando o início da era dos transportes aéreos pessoa...
+                </h3>
+            </figcaption>
 
+            <figcaption>
+                <img src="assets/Image 07.png" alt="carro">
+                <span class="content-tag">Hologramas</span>
+                <h3 class="text-lg">
+                    Plataforma de videoconferência apresenta nova função de hologramas, tornando as chamada...
+                </h3>
+            </figcaption>
+
+            <figcaption>
+                <img src="assets/Image 08.png" alt="carro">
+                <span class="content-tag">Realidade virtual</span>
+                <h3 class="text-lg">
+                    Nova geração de consoles de videogame é lançada, trazendo gráficos ultra-realistas e experiên...
+                </h3>
+            </figcaption>
+
+            <figcaption>
+                <img src="assets/Image 09.png" alt="carro">
+                <span class="content-tag">Internet</span>
+                <h3 class="text-lg">
+                    Projeto busca oferecer internet de alta velocidade em áreas remotas através de satélites.
+                </h3>
+            </figcaption>
+        </figure>
+        </section>
+        <section class="section grid grid-col gap-32">
+
+            <div id="ia">
+                <div class="top-bar">
+                    <span>Destaques de Inteligência Artificial</span>
+                    <a href="#">
+                        <strong>Ver tudo</strong> <span><img src="assets/ArrowRight.svg" alt="seta"></span>
+                    </a>
+                </div>
+                    <figcaption class="grid grid-col">
+                        <span class="content-tag">Inteligência Artificial</span>
+                        <div>
+                            <h2>Empresa surpreende o mundo ao anunciar um algoritmo capaz de prever eventos futuros com alta precisão.</h2>
+                            <p>Em um avanço surpreendente da inteligência artificial, uma empresa anuncia o desenvolvimento de um algoritmo capaz de prever eventos futuros com notável precisão. Descubra como essa tecnologia está desafiando as fronteiras da previsão e quais são as implicações para diversas áreas, desde finanças até pla...</p>
+                        </div>
+                        <div>
+                            <img src="assets/Image 10.png" alt="siclope">
+                        </div>
+                    </figcaption>
+                    <figcaption class="grid grid-col">
+                        <span class="content-tag">Inteligência Artificial</span>
+                        <div>
+                            <h2>Empresa surpreende o mundo ao anunciar um algoritmo capaz de prever eventos futuros com alta precisão.</h2>
+                            <p>Em um avanço surpreendente da inteligência artificial, uma empresa anuncia o desenvolvimento de um algoritmo capaz de prever eventos futuros com notável precisão. Descubra como essa tecnologia está desafiando as fronteiras da previsão e quais são as implicações para diversas áreas, desde finanças até pla...</p>
+                        </div>
+                        <div>
+                            <img src="assets/Image 10.png" alt="siclope">
+                        </div>
+                    </figcaption>
+            </div>
+            <aside>
+                <img src="assets/Ads.png" alt="">
+            </aside>
         </section>
     </main>
 </body>
