Estilizando as sessões

--- a/index.html
+++ b/index.html
@@ -70,9 +70,11 @@
             </div>
         </section>
         <section id="most-read" class="section">
-            <div class="top-bar">
-                <span>Mais lidas da semana</span>
-                <a href="#">Ver tudo <img src="assets/ArrowRight.svg" style="color: blue" alt="seta"></a>
+            <div class="header">
+                <h3>Mais lidas da semana</h3>
+                <span>
+                    <a href="#">Ver tudo <img src="assets/ArrowRight.svg"></a>
+                </span>
             </div>
             <figure class="grid grid-col gap-16">
             <figcaption>
@@ -111,36 +113,60 @@
         <section class="section grid grid-col gap-32">
 
             <div id="ia">
-                <div class="top-bar">
-                    <span>Destaques de Inteligência Artificial</span>
+                <header class="header">
+                    <h3>Destaques de Inteligência Artificial</h3>
                     <a href="#">
                         <strong>Ver tudo</strong> <span><img src="assets/ArrowRight.svg" alt="seta"></span>
                     </a>
-                </div>
-                    <figcaption class="grid grid-col">
+                </header>
+                    <figcaption class="grid grid-col ia">
                         <span class="content-tag">Inteligência Artificial</span>
                         <div>
-                            <h2>Empresa surpreende o mundo ao anunciar um algoritmo capaz de prever eventos futuros com alta precisão.</h2>
+                            <h3>Empresa surpreende o mundo ao anunciar um algoritmo capaz de prever eventos futuros com alta precisão.</h3>
                             <p>Em um avanço surpreendente da inteligência artificial, uma empresa anuncia o desenvolvimento de um algoritmo capaz de prever eventos futuros com notável precisão. Descubra como essa tecnologia está desafiando as fronteiras da previsão e quais são as implicações para diversas áreas, desde finanças até pla...</p>
                         </div>
                         <div>
                             <img src="assets/Image 10.png" alt="siclope">
                         </div>
                     </figcaption>
-                    <figcaption class="grid grid-col">
+
+                    <figcaption class="grid grid-col ia">
                         <span class="content-tag">Inteligência Artificial</span>
                         <div>
-                            <h2>Empresa surpreende o mundo ao anunciar um algoritmo capaz de prever eventos futuros com alta precisão.</h2>
-                            <p>Em um avanço surpreendente da inteligência artificial, uma empresa anuncia o desenvolvimento de um algoritmo capaz de prever eventos futuros com notável precisão. Descubra como essa tecnologia está desafiando as fronteiras da previsão e quais são as implicações para diversas áreas, desde finanças até pla...</p>
+                            <h>Empresa surpreende o mundo ao anunciar um algoritmo capaz de prever eventos futuros com alta precisão.</h>
+                            <p>Em um mundo cada vez mais conectado, a comunicação sem fronteiras é essencial. Nesse contexto, um dispositivo portátil surge como um verdadeiro herói linguístico, prometendo quebrar as barreiras idiomáticas instantaneamente. Imagine poder se comunicar fluentemente em qualquer lugar do mundo, independe...</p>
                         </div>
                         <div>
-                            <img src="assets/Image 10.png" alt="siclope">
+                            <img src="assets/Image 11.png" alt="siclope">
                         </div>
                     </figcaption>
+
+                    <figcaption class="grid grid-col ia">
+                        <span class="content-tag">Inteligência Artificial</span>
+                        <div>
+                            <h>Criados para auxiliar idosos, robôs de companhia ganham popularidade, oferecendo suporte emocional e físico aos usuários.</h>
+                            <p>A tecnologia não só avança, mas também busca tornar a vida mais significativa para todas as gerações. No cenário atual, os robôs sociais, projetados especialmente para oferecer apoio e companhia aos idosos, estão ganhando destaque. Mais do que meros assistentes, esses robôs são programados para...</p>
+                        </div>
+                        <div>
+                            <img src="assets/Image 12.png" alt="siclope">
+                        </div>
+                    </figcaption>
+
+                    <figcaption class="grid grid-col ia">
+                        <span class="content-tag">Inteligência Artificial</span>
+                        <div>
+                            <h>Aplicativo utiliza inteligência artificial para ajudar usuários a manterem o foco e aumentarem a produtividade no dia a dia.</h>
+                            <p>No turbilhão da vida moderna, onde distrações são abundantes, um aplicativo inovador surge como um aliado indispensável para quem busca maior concentração e eficiência no cotidiano. Utilizando avançados algoritmos de inteligência artificial, este aplicativo promete mais do que simplesmente geren...
+                        </div>
+                        <div>
+                            <img src="assets/Image 13.png" alt="siclope">
+                        </div>
+                    </figcaption>
+                    <aside>
+                        <img src="assets/Ads.png" alt="">
+                    </aside>
             </div>
-            <aside>
-                <img src="assets/Ads.png" alt="">
-            </aside>
+
         </section>
     </main>
 </body>
