mudança de emergência

--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
         <section id="most-read" class="section">
             <div class="header">
                 <h3>Mais lidas da semana</h3>
-                <span>
-                    <a href="#">Ver tudo <img src="assets/ArrowRight.svg"></a>
-                </span>
+                    <a href="#">Ver tudo 
+                        <span>
+                        </span>
+                    </a>
             </div>
             <figure class="grid grid-col gap-16">
             <figcaption>
